force-app/main/default/objects/Fulfillment_Sync_Log__c/Fulfillment_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Fulfillment Sync Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfillment Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>