force-app/main/default/objects/Fulfillment_Sync_Log__c/fields/External_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Order_ID__c</fullName>
    <description>Stores the Id if successful, blank if not</description>
    <label>External Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>