force-app/main/default/objects/Fulfillment_Sync_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the opportunity the Fulfillment sync synced with.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fulfillment Sync Logs</relationshipLabel>
    <relationshipName>Fulfillment_Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>