force-app/main/default/objects/Fulfillment_Sync_Log__c/fields/Sync_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Sync_DateTime__c</fullName>
    <description>When the sync attempt happened.</description>
    <label>Sync DateTime</label>
    <type>DateTime</type>
</CustomField>